welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : String("R")
 required: Boolean
		if ("R") { droite();avance();}
                    ^BDRBuggle:5: error: type mismatch;
 found   : String("L")
 required: Boolean
		if ("L") { gauche();avance();}
                    ^BDRBuggle:6: error: type mismatch;
 found   : String("I")
 required: Boolean
		if ("I") { droite();droite();avance();}
                    ^BDRBuggle:7: error: type mismatch;
 found   : String("A")
 required: Boolean
		if ("A") { avance();}
                    ^BDRBuggle:8: error: type mismatch;
 found   : String("B")
 required: Boolean
		if ("B") {avance();avance();}
                    ^BDRBuggle:9: error: type mismatch;
 found   : String("C")
 required: Boolean
		if ("C") { avance();avance();avance();}
                    ^BDRBuggle:10: error: type mismatch;
 found   : String("Z")
 required: Boolean
		if ("Z") { recule();}
                    ^BDRBuggle:11: error: type mismatch;
 found   : String("X")
 required: Boolean
		if ("X") { recule();recule();}
                    ^BDRBuggle:12: error: type mismatch;
 found   : String("Y")
 required: Boolean
		if ("Y") { recule();recule();recule();}
                    ^