welcome.lessons.welcome.bdr.BDR.scala.code
if (estSurMessage) {
	litMessage()
		if ("R") { droite();avance();}
		if ("L") { gauche();avance();}
		if ("I") { droite();droite();avance();}
		if ("A") { avance();}
		if ("B") {avance();avance();}
		if ("C") { avance();avance();avance();}
		if ("Z") { recule();}
		if ("X") { recule();recule();}
		if ("Y") { recule();recule();recule();}
}
